test/ppx_irmin/deriver/errors/nobuiltin_nonempty.ml
type x = (unit[@nobuiltin ()]) [@@deriving irmin]
