test/ppx_irmin/deriver/errors/nobuiltin_nonempty.expected
File "nobuiltin_nonempty.ml", line 1, characters 26-28:
Error: `nobuiltin` payload must be empty
